Show image on html

--- a/media_example/templates/media-example.html
+++ b/media_example/templates/media-example.html
@@ -18,7 +18,7 @@
         </form>
         {% if instance %}
             <!--<img src="{{ save_path }}">-->
-            <img src="{{ instance.image_field.url }}">
+            <img src="{{ instance.file_upload.url }}">
         {% endif %}
     </div>
 </body>
